--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,11 @@
 .mbody {
-    width: 3200px;
+    width: 600px;
     padding: 10px;
     border: 1px solid gray;
     margin: 10; 
+    position:absolute;
+  	top:50%;
+	left:50%;
+	margin-top:-10px; /* this is half the height of your div*/  
+	margin-left:-300px; /*this is half of width of your div*/
 }
