--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 .mbody {
-    width: 1000px;
+    width: 800px;
     padding: 10px;
-    border: 1px solid gray;
+    border: 2px solid gray;
     margin: 10; 
     position:absolute;
   	top:50%;
 	left:50%;
-	/*margin-top:-10px; /* this is half the height of your div*/  
-	/*margin-left:-300px; /*this is half of width of your div*/
+	margin-top:-500px; /* this is half the height of your div*/  
+	margin-left:-300px; /*this is half of width of your div*/
 }
