--- a/assets/style.css
+++ b/assets/style.css
@@ -3,9 +3,8 @@
     padding: 10px;
     border: 2px solid gray;
     margin: 10; 
-    position:absolute;
-  	top:50%;
-	left:50%;
-	margin-top:-500px; /* this is half the height of your div*/  
-	margin-left:-300px; /*this is half of width of your div*/
+	text-align: center;
+    vertical-align: middle;
+    margin-top: 25%;
+    margin-bottom: 25%;
 }
