--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,6 @@
     margin: 10; 
 	text-align: center;
     vertical-align: middle;
-    /*margin-top: 25%;*/
-    margin-bottom: 25%;
+    margin-top: 30%;
+    margin-bottom: 30%;
 }
