--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@
     padding: 10px;
     border: 2px solid gray;
     margin: 10; 
-	text-align: center;
+	/*text-align: center;*/
     vertical-align: middle;
-    margin-top: 30%;
-    margin-bottom: 30%;
+    margin-top: 25%;
+    margin-bottom: 25%;
 }
