--- a/assets/style.css
+++ b/assets/style.css
@@ -2,9 +2,9 @@
     width: 800px;
     padding: 10px;
     border: 2px solid gray;
-    margin: 10; 
+    margin: 0 10 0 10; 
 	/*text-align: center;*/
     vertical-align: middle;
-    margin-top: 5%;
+    /*margin-top: 5%;*/
     margin-bottom: 5%;
 }
