--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
     padding: 10px;
     border: 2px solid gray;
     margin: 0 10 0 10; 
-	text-align: center;
+	/*text-align: center;*/
     vertical-align: middle;
     /*margin-top: 5%;*/
     margin-bottom: 5%;
