--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,7 @@
     padding: 10px;
     border: 2px solid gray;
     margin: 0 10 0 10; 
-	text-align: center;
-    vertical-align: middle;
+    vertical-align: center;
     /*margin-top: 5%;*/
     margin-bottom: 5%;
 }
