--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 .mbody {
     width: 800px;
     padding: 10px;
-    border: 2px solid aqua;
+    border: 2px solid RGB(22, 160, 133);
     margin: auto; 
     vertical-align: center;
     /*margin-top: 5%;*/
